0.97.3.2:
  - Automatic Townyperms.yml update:
    - nomad group will have towny.command.town.ranklist and towny.command.nation.ranklist added to it.
  - Refactor a bunch of NationCommand code.
  - Fix how StatusScreens handle Components with children.
  - Fix NationCommand permission node test.
  - Deprecate the NationToggleUnknownEvent.
  - Fix possible npe when checking bankrupt status, courtesy of Warriorrrr with PR #5474.
  - Fix chunk notifications missing coloured plot names.
    - Closes #5481.
0.97.3.3:
  - Fix DecimalDataField and RawDataField cloning returning a label when none is present.
  - Prevent Towny from loading if the townyperms.yml is missing a vital group, ie: mayor, king, nomad, etc.
  - Remove redundant nationSpawn variable, courtesy of Warriorrrr with PR #5485.
  - Add web map integration to status screens, courtesy of Warriorrrr with PR #5484.
  - Queue the revert on unclaim feature.
    - Only 20 plots can be actively reverting at one time.
    - Plot snapshots are only loaded into memory when the queue calls for the revert to start.
    - Closes #5473. 
  - Bump adventure-platform to 4.0.1 for 1.18 compatibility.
0.97.4.0:
  - Bump version number for release.
0.97.4.1:
  - Make the ItemLists class not an interface, courtesy of Warriorrrr with PR #5490.
  - Fix the delete town event causing an NPE in edge cases, courtesy of Warriorrrr with PR #5492.
  - Fix javadoc warning, courtesy of Warriorrrr with PR #5495.
  - Schedule the next newday scheduler 1 minute after a new day happens instead of 1 second after. 
  - Fix NewDay time code returning negative for some time zones. 
0.97.5.0:
  - Bump version number for hotfix release.
0.97.5.1:
  - Add helpful methods to BaseCommand.
  - Fix regex used to split the townyperms.yml error message.
  - API: Added StatusScreenEvent#getCommandSender()
    - It is now possible to learn who is going to view the StatusScreen being made. 