@@ -7025,4 +7025,5 @@ v0.92.0.11:
   - Add helpful methods to BaseCommand.
   - Fix regex used to split the townyperms.yml error message.
   - API: Added StatusScreenEvent#getCommandSender()
-    - It is now possible to learn who is going to view the StatusScreen being made. 
+    - It is now possible to learn who is going to view the StatusScreen being made.
+  - Fix expired invite handler not accounting for sent nation ally invites.
